--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,21 +1,21 @@
 version: "3"
 services:
   pylife:
-    image: saitejachintakunta/pylife:v2
+    image: pylife:v2
     ports:
-      - "88:80"
+      - "85:80"
     deploy:
       replicas: 3
   moives:
-    image: saitejachintakunta/pymovies:v2
+    image: pymovies:v2
     ports:
-      - "89:80"
+      - "86:80"
     deploy:
       replicas: 3
   tv:
-    image: saitejachintakunta/pytv:v2
+    image: /pytv:v2
     ports:
-      - "90:80"
+      - "87:80"
     deploy:
       replicas: 3
 
